fixed issue where timer was hidden behind buttons. added a div that prevents the randomly generated word from popping into the dom and moving elements. added a modal with instructions on how to play the game. added more styling. Fixed sizing of canvas element. Joined the generate word and start timer functions on one onclick event.

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,51 @@ body{
   display: block;
   margin-left: auto;
   margin-right: auto;
+  width: 70%;
+}
+
+.modal{
+  margin-left: 87%;
+}
+
+.modal img:hover{
+  cursor: pointer;
+}
+
+#modal-open {
+	background-color: rgba(0,0,0,0.4);
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	z-index: 1;
+	overflow: hidden;
+  display: block;
+}
+
+#modal-textbox {
+	background-color: white;
+	width: 600px;
+  text-align: left;
+  border: 10px black dashed;
+	margin: 85px auto;
+	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+#modal-textbox h1{
+  margin-top: -6%;
+  text-align: center;
+}
+
+#modal-textbox p{
+  margin-left: 5%;
+  margin-right: 4%;
+}
+
+#modal-textbox img{
+  margin-top: 5%;
+  margin-left: 80%;
 }
 
 .scoreContainer{
@@ -29,11 +74,17 @@ body{
 
 .timer{
   text-align: center;
+  background-color: white;
+  width: 480px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 10px dashed black;
+  margin-top: 3%;
 }
 
 .buttons{
   text-align: center;
-  margin-top: -6%;
+  margin-top: 3%;
 }
 
 .buttons:hover{
@@ -41,21 +92,44 @@ body{
 }
 
 .canvas{
-  margin-top: -1%;
   margin-left: auto;
   margin-right: auto;
   width: 500px;
   text-align: center;
 }
 
-.canvasText{
+.canvas img:hover{
+  cursor: pointer;
+}
+
+.word{
   background-color: white;
-  border: 10px black dashed;
+  margin-top: 2%;
+  border-top: 10px black dashed;
+  border-left: 10px black dashed;
+  border-right: 10px black dashed;
+  width: 480px;
+  height: 45px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.canvasText{
+  margin-top: -5%;
+  margin-bottom: 4%;
+  background-color: white;
+  border-bottom: 10px black dashed;
+  border-left: 10px black dashed;
+  border-right: 10px black dashed;
   width: 500px;
+  height: 90px;
+  box-sizing: border-box;
 }
 
 .newCanvas{
+  margin-top: 3%;
+  margin-bottom: 5%;
   border: 10px black dashed;
-  width: 518px;
+  width: 500px;
   box-sizing: border-box;
 }
